# thermoextrap

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pylintrc.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  justfile  noxfile.py  pyproject.toml  ruff.toml
changelog.d/: 20250822_114610_wpk_apply_RightTyper.md  20250822_114926_wpk_apply_RightTyper.md  20250929_122535_wpk_add_typehints.md  20250929_134754_wpk_update_lazy_loader.md
docs/: conf.py
docs/notebooks/gpr/: Ideal_Gas.ipynb  LJ_lnPi.ipynb  SWF_Adsorption.ipynb
docs/notebooks/gpr/SWF_Adsorption_data/run1/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run10/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run11/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run12/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run13/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run14/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run15/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run16/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run17/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run18/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run19/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run2/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run20/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run21/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run22/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run23/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run24/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run25/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run26/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run27/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run28/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run29/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run3/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run30/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run31/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run32/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run33/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run34/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run35/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run36/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run37/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run38/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run39/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run4/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run40/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run41/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run42/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run43/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run44/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run45/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run46/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run47/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run48/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run49/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run5/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run50/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run51/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run52/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run53/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run54/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run55/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run56/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run57/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run58/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run59/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run6/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run60/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run61/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run62/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run63/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run64/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run65/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run66/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run67/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run68/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run69/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run7/: output.out
docs/notebooks/gpr/SWF_Adsorption_data/run70/: output.out
docs/reference/: api-baseclasses.rst  api-modules.rst  api-public.rst  index.rst
example_projects/gpr_active_learning/SRS_data/: sat_props_GPR.npz
examples/usage/basic/: Customized_Derivatives.ipynb  Data_Organization.ipynb  Temperature_Extrap_Case1.ipynb  Temperature_Interp.ipynb
examples/usage/gpr/: LJ_lnPi.ipynb
requirements/: py310-test-extras.yaml  py310-test.yaml  py311-test-extras.yaml  py311-test.yaml  py312-dev.yaml  py312-test-extras.yaml  py312-test.yaml  py39-test-extras.yaml  py39-test.yaml
requirements/lock/: dev.txt  uvx-tools.txt
src/thermoextrap/: __init__.py  __init__.pyi  adaptive_interp.py  beta.py  data.py  docstrings.py  idealgas.py  lnpi.py  models.py  recursive_interp.py  stack.py  volume.py  volume_idealgas.py
src/thermoextrap/core/: _attrs_utils.py  _deprecate.py  _imports.py  compat.py  docstrings.py  sputils.py  typing.py  typing_compat.py  validate.py  xrutils.py
src/thermoextrap/gpr_active/: _typing.py  active_utils.py  gp_models.py  ig_active.py  sine_active.py
tests/: conftest.py  test_active.py  test_beta.py  test_data.py  test_gps.py  test_idealgas.py  test_lnpi.py  test_stack.py  test_typing.py  test_u_data.py  test_u_equations.py  test_volume.py
tests/legacy/: __init__.py  data.py  extrap.py  gpr.py  gpr_stack.py  ig.py  interp.py  old_scripts.py  recursive_interp.py  reweight.py  utilities.py
tools/: custom.just  monkeytype-notebooks.sh  notebook.just  shared.just
(+496 files in other folders)
